// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Heading renders the UI snapshot correctly 1`] = `
<h1
  className="chakra-heading css-1xdhyk6"
  id="basic"
>
  Heading text
</h1>
`;

exports[`Heading renders the UI snapshot correctly 2`] = `
<h1
  className="chakra-heading css-1xdhyk6"
  id="basicWithChildText"
>
  Heading text
</h1>
`;

exports[`Heading renders the UI snapshot correctly 3`] = `
<h1
  className="chakra-heading css-1xdhyk6"
  id="customDisplaySize"
>
  Heading with Secondary size
</h1>
`;

exports[`Heading renders the UI snapshot correctly 4`] = `
<h6
  className="chakra-heading css-1xdhyk6"
  id="otherLevel"
>
  Heading level six
</h6>
`;

exports[`Heading renders the UI snapshot correctly 5`] = `
<h1
  className="chakra-heading css-1xdhyk6"
  id="withLink"
>
  <a
    className="css-1xdhyk6"
    href="fake-url"
    id="withLink-link"
    rel={null}
    target={null}
  >
    Heading text is a link
  </a>
</h1>
`;

exports[`Heading renders the UI snapshot correctly 6`] = `
<h1
  className="chakra-heading css-1xdhyk6"
  id="withCustomLink"
>
  Part of the heading text is
  <a
    className="custom-link"
    href="fake-url"
  >
    <span>
      a link
    </span>
  </a>
</h1>
`;

exports[`Heading renders the UI snapshot correctly 7`] = `
<h2
  className="chakra-heading css-10g9ftz"
  id="chakra"
>
  Heading
</h2>
`;

exports[`Heading renders the UI snapshot correctly 8`] = `
<h2
  className="chakra-heading css-1xdhyk6"
  data-testid="props"
  id="props"
>
  Heading
</h2>
`;

exports[`Heading renders the UI snapshot correctly 9`] = `
<hgroup
  className="css-0"
>
  <p
    className="chakra-text css-e3ddnr"
  >
    Overline
  </p>
  <h1
    className="chakra-heading css-1xdhyk6"
    id="customDisplaySize"
  >
    Heading with Secondary size
  </h1>
  <p
    className="chakra-text css-dqoc1s"
  >
    This is the subtitle
  </p>
</hgroup>
`;
